major reorganisation of rsc/ && renaming of multiple articles

--- a/index.html
+++ b/index.html
@@ -28,17 +28,16 @@
             <h1 class="column-header">ARTICLES</h1>
             <ul id="nav-items">
               <li class="nav-item"><a href="javascript:openArticle('encryption')">ENCRYPTION</a></li>
-              <li class="nav-item"><a href="javascript:openArticle('servers-hosting')">SERVERS & HOSTING</a></li>
-              <li class="nav-item"><a href="javascript:openArticle('web-development')">WEB DEVELOPMENT</a></li>
-              <!-- <li class="nav-item"><a href="javascript:openArticle('networks')">Networks</a></li> -->
-              <li class="nav-item"><a href="javascript:openArticle('terminals-scripting')">TERMINALS & SCRIPTING</a></li>
-              <!-- <li class="nav-item"><a href="javascript:openArticle('chicken-project-management')">Chicken Project Management</a></li> -->
-              <li class="nav-item"><a href="javascript:openArticle('linux-administration')">LINUX ADMINISTRATION</a></li>
+              <li class="nav-item"><a href="javascript:openArticle('servers')">SERVERS</a></li>
+              <li class="nav-item"><a href="javascript:openArticle('web')">WEB</a></li>
+              <li class="nav-item"><a href="javascript:openArticle('terminals')">TERMINALS</a></li>
+              <li class="nav-item"><a href="javascript:openArticle('linux')">LINUX</a></li>
               <li class="nav-item"><a href="javascript:openArticle('version-control')">VERSION CONTROL</a></li>
-              <!-- <li class="nav-item"><a href="javascript:openArticle('kista-mentorspace')">Kista Mentorspace</a></li> -->
               <li class="nav-item"><a href="javascript:openArticle('editors')">EDITORS</a></li>
               <li class="nav-item"><a href="javascript:openArticle('probability-statistics')">PROBABILITY & STATISTICS</a></li>
               <li class="nav-item"><a href="javascript:openArticle('contribute')">CONTRIBUTE</a></li>
+              <!-- <li class="nav-item"><a href="javascript:openArticle('chicken-project-management')">Chicken Project Management</a></li> -->
+              <!-- <li class="nav-item"><a href="javascript:openArticle('kista-mentorspace')">Kista Mentorspace</a></li> -->
             </ul>
           </nav>
         </div>
