index.html, moved script inclusion into head element with defer command

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>freshman basix wiki</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href='https://fonts.googleapis.com/css?family=Fira+Sans' rel='stylesheet' type='text/css'>
+    <script type="text/javascript" defer src="scripts/main.js"></script>
   </head>
 
   <body>
@@ -67,10 +68,5 @@
         </div>
       </div>
     </div>
-
-    <script type="text/javascript" src="scripts/main.js"></script>
-
   </body>
-
-
 </html>
