--- a/index.html
+++ b/index.html
@@ -35,10 +35,13 @@
               <li class="nav-item"><a href="#encryption">ENCRYPTION</a></li>
               <li class="nav-item"><a href="#servers">SERVERS</a></li>
               <li class="nav-item"><a href="#web">WEB</a></li>
+              <li class="nav-item"><a href="#email">EMAIL</a></li>
               <li class="nav-item"><a href="#terminals">TERMINALS</a></li>
               <li class="nav-item"><a href="#linux">LINUX</a></li>
               <li class="nav-item"><a href="#version-control">VERSION CONTROL</a></li>
               <li class="nav-item"><a href="#editors">EDITORS</a></li>
+              <li class="nav-item"><a href="#electronics">ELECTRONICS</a></li>
+              <li class="nav-item"><a href="#radio">RADIO</a></li>
               <li class="nav-item"><a href="#probability-statistics">PROBABILITY & STATISTICS</a></li>
               <li class="nav-item"><a href="#contribute">CONTRIBUTE</a></li>
             </ul>
