--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               <li class="nav-item"><a href="#email">EMAIL</a></li>
               <li class="nav-item"><a href="#terminals">TERMINALS</a></li>
               <li class="nav-item"><a href="#linux">LINUX</a></li>
-              <li class="nav-item"><a href="#version-control">VERSION CONTROL</a></li>
+              <li class="nav-item"><a href="#git">GIT</a></li>
               <li class="nav-item"><a href="#editors">EDITORS</a></li>
               <li class="nav-item"><a href="#electronics">ELECTRONICS</a></li>
               <li class="nav-item"><a href="#radio">RADIO</a></li>
