added website tab icon

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>freshman basix wiki</title>
+    <link rel="icon" href="rsc/site/tab-icon.ico">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href='https://fonts.googleapis.com/css?family=Fira+Sans' rel='stylesheet' type='text/css'>
     <script type="text/javascript" defer src="scripts/route.js"></script>
