--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
               <li class="nav-item"><a href="#servers">SERVERS</a></li>
               <li class="nav-item"><a href="#web">WEB</a></li>
               <li class="nav-item"><a href="#email">EMAIL</a></li>
-              <li class="nav-item"><a href="#terminals">TERMINALS</a></li>
+              <li class="nav-item"><a href="#bash">BASH</a></li>
               <li class="nav-item"><a href="#linux">LINUX</a></li>
               <li class="nav-item"><a href="#git">GIT</a></li>
               <li class="nav-item"><a href="#editors">EDITORS</a></li>
