--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
               <li class="nav-item"><a href="#linux">LINUX</a></li>
               <li class="nav-item"><a href="#git">GIT</a></li>
               <li class="nav-item"><a href="#editors">EDITORS</a></li>
+              <li class="nav-item"><a href="#physics">PHYSICS</a></li>
               <li class="nav-item"><a href="#electronics">ELECTRONICS</a></li>
               <li class="nav-item"><a href="#radio">RADIO</a></li>
               <li class="nav-item"><a href="#probability-statistics">PROBABILITY & STATISTICS</a></li>
