publish calculus.html article

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
               <li class="nav-item"><a href="#physics">PHYSICS</a></li>
               <li class="nav-item"><a href="#electronics">ELECTRONICS</a></li>
               <li class="nav-item"><a href="#radio">RADIO</a></li>
+              <li class="nav-item"><a href="#calculus">CALCULUS</a></li>
               <li class="nav-item"><a href="#probability-statistics">PROBABILITY & STATISTICS</a></li>
               <li class="nav-item"><a href="#contribute">CONTRIBUTE</a></li>
             </ul>
