publish bike-mechanics.html

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
               <li class="nav-item"><a href="#radio">RADIO</a></li>
               <li class="nav-item"><a href="#calculus">CALCULUS</a></li>
               <li class="nav-item"><a href="#probability-statistics">PROBABILITY & STATISTICS</a></li>
+              <li class="nav-item"><a href="#bike-mechanics">BIKE MECHANICS</a></li>
               <li class="nav-item"><a href="#contribute">CONTRIBUTE</a></li>
             </ul>
           </nav>
